# pyansys

./: .buildinfo  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  CNAME  LICENSE  Makefile  README.rst  globalsitemap.xml  ignore_words.txt  index.html  milestone.py  projects-metadata.yaml  projects.yaml  pyproject.toml  requirements_docs.txt  robots.txt  setup.cfg  setup.py  sitemap.xml  versions.json
.github/: dependabot.yml
.github/workflows/: ci-build.yml  ci_cd_main.yml  ci_cd_pr.yml  ci_cd_release.yml  create-milestone.yml  dependency-reviewer.yml  py311.yml  update-gh-pages.yml
doc/: .vale.ini  Makefile  make.bat
doc/source/: api.rst  blog.rst  blogs.rst  conf.py  contact.rst  examples.rst  getting_started.rst  index.rst  links.rst  other-contribs.rst  projects.rst  supported_versions.rst  tools.rst  user_guide.rst
doc/source/_static/: static_viewer.html  testimonials.json
doc/source/_templates/: blog.html  blog_sidebar.html  blogs_sidebar.html  footer_center.html  footer_left.html  footer_right.html  landing_page_sidebar.html  project_card.html  projects_sidebar.html
doc/source/blog/: 2025-09-30-newsletter.rst  blog1.rst  blog2.rst  blog3.rst  (+3 more)
doc/styles/: .gitignore
docs/source/: conf.py  index.rst
pull/1071/: blog.html  genindex.html  getting-started.html  index.html  objects.inv  projects.html  search.html  searchindex.js
pull/1077/: projects.html
pull/1083/: blog.html  genindex.html  getting-started.html  index.html  projects.html  search.html  searchindex.js
pull/1086/: blog.html  genindex.html  getting-started.html  index.html  projects.html  search.html  searchindex.js
pull/1093/: blog.html  genindex.html  getting-started.html  index.html  projects.html  search.html
pull/1099/: genindex.html  index.html  projects.html  searchindex.js
pull/1124/: blog.html  getting-started.html  index.html  objects.inv  projects.html  search.html  searchindex.js
pull/1138/: genindex.html  index.html  projects.html  search.html  searchindex.js
pull/1155/: projects.html  searchindex.js
pull/1156/: index.html  projects.html  searchindex.js
pull/1218/: blog.html  genindex.html  getting-started.html  index.html  other-contribs.html  projects.html  search.html  searchindex.js
pull/1252/: index.html  other-contribs.html  projects.html  search.html  searchindex.js
pull/1253/: genindex.html  index.html  projects.html  searchindex.js
pull/1285/: blog.html  genindex.html  getting-started.html  index.html  objects.inv  other-contribs.html  projects.html  searchindex.js
pull/1298/: blog.html  genindex.html  getting-started.html  index.html  other-contribs.html  projects.html  search.html  searchindex.js
pull/1303/: index.html  projects.html  search.html  searchindex.js
pull/899/: blog.html  genindex.html  getting-started.html  index.html  projects.html  search.html  searchindex.js
pull/913/: blog.html  contact.html  genindex.html  getting-started.html  index.html  objects.inv  projects.html  search.html  searchindex.js
pyansys/: _version.py
sitemaps/: ansys-additive-core_sitemap.xml  ansys-additive-widgets_sitemap.xml  ansys-aedt-mcp_sitemap.xml  ansys-cfx-core_sitemap.xml  ansys-chemkin-core_sitemap.xml  ansys-conceptev-core_sitemap.xml  ansys-dpf-composites_sitemap.xml  ansys-dpf-core_sitemap.xml  ansys-dpf-post_sitemap.xml  ansys-dyna-core_sitemap.xml  ansys-dynamicreporting-core_sitemap.xml  ansys-edb-core_sitemap.xml  ansys-fluent-core_sitemap.xml  ansys-fluent-mcp_sitemap.xml  ansys-fluent-visualization_sitemap.xml  ansys-geometry-core_sitemap.xml  ansys-hps-client_sitemap.xml  ansys-hps-data-transfer-client_sitemap.xml  ansys-lumerical-core_sitemap.xml  ansys-lumerical-mcp_sitemap.xml  ansys-mapdl-core_sitemap.xml  ansys-mapdl-mcp_sitemap.xml  ansys-mapdl-reader_sitemap.xml  ansys-materials-manager_sitemap.xml  ansys-math-core_sitemap.xml  ansys-mechanical-core_sitemap.xml  ansys-mechanical-mcp_sitemap.xml  ansys-meshing-prime_sitemap.xml  ansys-modelcenter-workflow_sitemap.xml  ansys-motorcad-core_sitemap.xml  ansys-optislang-core_sitemap.xml  ansys-platform-instancemanagement_sitemap.xml  ansys-pyensight-core_sitemap.xml  ansys-rocky-core_sitemap.xml  ansys-sam-sysml2_sitemap.xml  ansys-seascape_sitemap.xml  ansys-sherlock-core_sitemap.xml  ansys-simai-core_sitemap.xml  ansys-sound-core_sitemap.xml  ansys-speos-core_sitemap.xml  (+17 more)
src/pyansys/: __init__.py  _version.py
tools/: catsitemap.py  links.py  milestone.py
version/: index.html
version/2023.2/: .buildinfo  announcement.html  api.html  examples.html  genindex.html  getting_started.html  index.html  objects.inv  search.html  searchindex.js  user_guide.html
version/2024.1/: .buildinfo  announcement.html  api.html  examples.html  genindex.html  getting_started.html  index.html  objects.inv  search.html  searchindex.js  user_guide.html
version/2024.2/: .buildinfo  api.html  examples.html  genindex.html  getting_started.html  index.html  objects.inv  search.html  searchindex.js  supported_versions.html  user_guide.html
version/2025.1/: api.html  examples.html  genindex.html  getting-started.html  index.html  objects.inv  search.html  searchindex.js  user_guide.html
version/2025.2/: api.html  examples.html  genindex.html  getting-started.html  index.html  objects.inv  searchindex.js  user_guide.html
version/2026.1/: blog.html  getting-started.html  index.html  objects.inv  other-contribs.html  searchindex.js
version/2026.1.0b1/: blog.html  genindex.html  getting-started.html  index.html  objects.inv  projects.html  search.html  searchindex.js
version/dev/: .buildinfo  api.html  blog.html  examples.html  genindex.html  getting-started.html  getting_started.html  index.html  objects.inv  other-contribs.html  projects.html  search.html  searchindex.js  supported_versions.html  user_guide.html
version/stable/: .buildinfo  api.html  blog.html  examples.html  genindex.html  getting-started.html  getting_started.html  index.html  objects.inv  other-contribs.html  projects.html  search.html  searchindex.js  supported_versions.html  user_guide.html
(+285 files in other folders)
