[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
# Check https://flit.readthedocs.io/en/latest/pyproject_toml.html for all available sections
name = "pyansys"
version = "2025.1.dev0"
description = "Pythonic interfaces to Ansys products"
readme = "README.rst"
requires-python = ">=3.10,<4"
license = { file = "LICENSE" }
authors = [{ name = "ANSYS, Inc.", email = "pyansys.support@ansys.com" }]
maintainers = [{ name = "PyAnsys developers", email = "pyansys.maintainers@ansys.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "ansys-acp-core==0.1b2",
    "ansys-additive-core==0.18.1",
    "ansys-additive-widgets==0.2.1",
    "ansys-conceptev-core==0.5",
    "ansys-dpf-composites==0.6.1",
    "ansys-dpf-core==0.13.0",
    "ansys-dpf-post==0.9.0",
    "ansys-dyna-core==0.5.0",
    "ansys-dynamicreporting-core==0.7.0",
    "ansys-edb-core==0.1.7",
    "ansys-fluent-core==0.26.1",
    "ansys-geometry-core==0.7.3",
    "ansys-hps-client==0.9.0",
    "ansys-mapdl-core==0.68.5",
    "ansys-math-core==0.2.0",
    "ansys-mechanical-core==0.11.7",
    "ansys-meshing-prime==0.6.2",
    "ansys-modelcenter-workflow==0.1.1",
    "ansys-motorcad-core==0.6.0",
    "ansys-optislang-core==0.8.0",
    "ansys-platform-instancemanagement==1.1.2",
    "ansys-pyensight-core==0.8.11",
    "ansys-rocky-core==0.2.0",
    "ansys-seascape==0.2.0",
    "ansys-sherlock-core==0.7.1",
    "ansys-simai-core==0.2.4",
    "ansys-sound-core==0.1.3",
    "ansys-systemcoupling-core==0.8.0",
    "ansys-turbogrid-core==0.4.1",
    "ansys-workbench-core==0.6.0",
    "pyaedt==0.11.0",
    "pyedb==0.30.0",
    "pygranta==2024.2.0",
    "pytwin==0.7.0",
]

[project.optional-dependencies]
mapdl-all = ["ansys-mapdl-reader==0.54.1"]
fluent-all = ["ansys-fluent-visualization==0.14.0"]
tools = [
    "ansys-materials-manager==0.2.3",
    "ansys-tools-filetransfer==0.1.0",
    "ansys-tools-local-product-launcher==0.1.0",
    "ansys-tools-path==0.6.0",
    # "ansys-tools-protoc-helper==0.4.0; python_version<='3.10'",
    "ansys-tools-visualization-interface==0.4.5",
    "ansys-units==0.3.2",
    "pyansys-tools-report==0.8.0",
    "pyansys-tools-versioning==0.6.0",
    "pyansys-tools-variableinterop==0.1.1",
]
all = [
    # MAPDL - ALL
    "ansys-mapdl-reader==0.54.1",
    # FLUENT - ALL
    "ansys-fluent-visualization==0.14.0",
    # TOOLS
    "ansys-materials-manager==0.2.3",
    "ansys-tools-filetransfer==0.1.0",
    "ansys-tools-local-product-launcher==0.1.0",
    "ansys-tools-path==0.6.0",
    # "ansys-tools-protoc-helper==0.4.0; python_version<='3.10'",
    "ansys-tools-visualization-interface==0.4.5",
    "ansys-units==0.3.2",
    "pyansys-tools-report==0.8.0",
    "pyansys-tools-versioning==0.6.0",
    "pyansys-tools-variableinterop==0.1.1",
]
doc = [
    "Sphinx==8.0.2",
    "ansys-sphinx-theme==1.1.2",
    "Jinja2 ==3.1.4",
    "Pillow==10.4.0",
    "PyGithub==2.4.0",
    "sphinx-copybutton==0.5.2",
    "sphinx-design==0.6.1",
    "sphinxcontrib-mermaid==0.9.2",
]

[project.urls]
Source = "https://github.com/ansys/pyansys"
Documentation = "https://docs.pyansys.com"

[tool.flit.module]
name = "pyansys"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
force_sort_within_sections = true
line_length = 100
src_paths = ["doc", "src"]
