[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
# Check https://flit.readthedocs.io/en/latest/pyproject_toml.html for all available sections
name = "pyansys"
version = "2025.1.dev0"
description = "Pythonic interfaces to Ansys products"
readme = "README.rst"
requires-python = ">=3.10,<4"
license = { file = "LICENSE" }
authors = [{ name = "ANSYS, Inc.", email = "pyansys.support@ansys.com" }]
maintainers = [{ name = "PyAnsys developers", email = "pyansys.maintainers@ansys.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "ansys-acp-core==0.2.0",
    "ansys-additive-core==0.20.0",
    "ansys-conceptev-core==0.9.4",
    "ansys-dpf-composites==0.7.0",
    "ansys-dpf-core==0.13.8",
    "ansys-dpf-post==0.9.3",
    "ansys-dyna-core==0.8.0",
    "ansys-dynamicreporting-core==0.10.1",
    "ansys-edb-core==0.2.0.dev5",
    "ansys-fluent-core==0.33.0",
    "ansys-geometry-core==0.10.9",
    "ansys-hps-client==0.10.1",
    "ansys-hps-data-transfer-client==0.2.1",
    "ansys-mapdl-core==0.70.2",
    "ansys-math-core==0.2.4",
    "ansys-mechanical-core==0.11.26",
    "ansys-meshing-prime==0.10.0.dev2",
    "ansys-modelcenter-workflow==0.1.1",
    "ansys-motorcad-core==0.7.4",
    "ansys-optislang-core==1.0.0",
    "ansys-platform-instancemanagement==1.1.2",
    "ansys-pyensight-core==0.10.6",
    "ansys-rocky-core==0.3.2",
    "ansys-seascape==0.2.0",
    "ansys-sherlock-core==0.9.0",
    "ansys-simai-core==0.3.3",
    "ansys-sound-core==0.1.3",
    "ansys-speos-core==0.5.2",
    "ansys-systemcoupling-core==0.9.1",
    "ansys-turbogrid-core==0.4.5",
    "ansys-workbench-core==0.9.0",
    "pyaedt==0.17.5",
    "pyedb==0.53.0",
    "pygranta==2025.2.0",
    "pytwin==0.9.2",
]

[project.optional-dependencies]
mapdl-all = ["ansys-mapdl-reader==0.55.1"]
fluent-all = ["ansys-fluent-visualization==0.20.0"]
tools = [
    "ansys-materials-manager==0.3.0",
    "ansys-tools-filetransfer==0.1.1",
    "ansys-tools-local-product-launcher==0.1.1",
    "ansys-tools-path==0.7.3",
    # "ansys-tools-protoc-helper==0.4.0; python_version<='3.10'",
    "ansys-tools-visualization-interface==0.11.0",
    "ansys-units==0.6.0",
    "pyansys-tools-report==0.8.2",
    "pyansys-tools-versioning==0.6.0",
    "pyansys-tools-variableinterop==0.1.1",
]
all = [
    # MAPDL - ALL
    "ansys-mapdl-reader==0.55.1",
    # FLUENT - ALL
    "ansys-fluent-visualization==0.20.0",
    # TOOLS
    "ansys-materials-manager==0.3.0",
    "ansys-tools-filetransfer==0.1.1",
    "ansys-tools-local-product-launcher==0.1.1",
    "ansys-tools-path==0.7.3",
    # "ansys-tools-protoc-helper==0.4.0; python_version<='3.10'",
    "ansys-tools-visualization-interface==0.11.0",
    "ansys-units==0.6.0",
    "pyansys-tools-report==0.8.2",
    "pyansys-tools-versioning==0.6.0",
    "pyansys-tools-variableinterop==0.1.1",
]
doc = [
    "Sphinx==8.2.3",
    "ansys-sphinx-theme==1.5.3",
    "Jinja2 ==3.1.6",
    "Pillow==11.3.0",
    "PyGithub==2.6.1",
    "sphinx-copybutton==0.5.2",
    "sphinx-design==0.6.1",
    "sphinxcontrib-mermaid==1.0.0",
    "sphinx-jinja==2.0.2",
]

[project.urls]
Source = "https://github.com/ansys/pyansys"
Documentation = "https://docs.pyansys.com"

[tool.flit.module]
name = "pyansys"

[tool.ruff]
line-length = 100
fix = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle, see https://docs.astral.sh/ruff/rules/#pycodestyle-e-w
    "F",    # pyflakes, see https://docs.astral.sh/ruff/rules/#pyflakes-f
    "I",    # isort, see https://docs.astral.sh/ruff/rules/#isort-i
    "N",    # pep8-naming, see https://docs.astral.sh/ruff/rules/#pep8-naming-n
    "PTH",  # flake8-use-pathlib, https://docs.astral.sh/ruff/rules/#flake8-use-pathlib-pth
    "TD",   # flake8-todos, https://docs.astral.sh/ruff/rules/#flake8-todos-td
]
ignore = [
    "TD002", # Missing author in TODOs comment
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
